1999-10-18  Gary Houston  <ghouston@freewire.co.uk>

	* tests/ports.test: add seek/tell tests for unidirectional ports.

1999-09-25  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/reader.test: Check that number->string checks its radix
	properly.
	
1999-09-20  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/ports.test: Check that our input functions cope when
	current-input-port is closed.

	* tests/regexp.test: Check regexp-substitute/global when there are
	no matches.  (Duh.)

1999-09-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* tests/c-api.test: New file.  Add test to check that all source
	files which use SEEK_SET, SEEK_CUR, and SEEK_END include unistd.h.

1999-09-14  Gary Houston  <ghouston@freewire.co.uk>

	* tests/ports.test: test non-blocking I/O.

1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/strings.test: Add test for substring-move! argument checking.

	* lib.scm (signals-error?, signals-error?*): New macro and function.
	* tests/reader.test: Use them.

	* tests/interp.test: Add copyright notice.

	* tests/reader.test: New test file.

	* tests/regexp.test: New test file.

1999-09-06  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* tests/interp.test: Added tests for evaluation of closure bodies.

1999-09-03  James Blandy  <jimb@mule.m17n.org>

	* tests/multilingual.nottest: New file, which we will turn into a
	test file once we actually have multilingual support to test.

	* tests/load.test: New test file.

1999-08-30  James Blandy  <jimb@mule.m17n.org>

	* tests/strings.test: New test file.

1999-08-29  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: test unread-char and unread-string.

1999-08-19  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: test line-buffering of fports.

1999-08-18  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: tests for NUL and non-ASCII chars to fports.

1999-08-12  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: lseek -> seek.
